Agregación de Componentes y estilización
Se logró estilizar los componentes que de SemanticUI

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,18 @@
-<p>
-    home works!
-</p>
+<sui-tabset>
+        <div class="ui top attached tabular menu">
+            <a class="item" suiTabHeader="1">Lunes</a>
+            <a class="item" suiTabHeader="2">Martes</a>
+            <a class="item" suiTabHeader="3">Miércoles</a>
+            <a class="item" suiTabHeader="4">Jueves</a>
+            <a class="item" suiTabHeader="5">Viernes</a>
+            <a class="item" suiTabHeader="6">Sábado</a>
+            <a class="item" suiTabHeader="7">Domingo</a>
+        </div>
+        <div class="ui bottom attached segment tabs-body-content" suiTabContent="1">Monday tab!</div>
+        <div class="ui bottom attached segment tabs-body-content" suiTabContent="2">Tuesday tab!</div>
+        <div class="ui bottom attached segment tabs-body-content" suiTabContent="3">Wednesday tab!</div>
+        <div class="ui bottom attached segment tabs-body-content" suiTabContent="4">Thursday tab!</div>
+        <div class="ui bottom attached segment tabs-body-content" suiTabContent="5">Friday tab!</div>
+        <div class="ui bottom attached segment tabs-body-content" suiTabContent="6">Saturday tab!</div>
+        <div class="ui bottom attached segment tabs-body-content" suiTabContent="7">Sunday tab!</div>
+</sui-tabset>
