--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,12 @@
 <div class="ui top attached demo menu">
-  <a class="item" (click)="sidebar.toggle()">
-      <i class="sidebar icon"></i> Menu
-  </a>
+  <a class="item" (click)="sidebar.toggle()"><i class="sidebar icon"></i></a>
 </div>
 <sui-sidebar-container class="ui bottom attached segment">
-  <sui-sidebar class="inverted vertical" #sidebar>
+  <sui-sidebar class="inverted vertical" #sidebar style="background-image: url('../assets/background.jpg')">
       <a class="item" routerLink="home">Home</a>
       <a class="item" routerLink="notes">Notes</a>
+      <a class="item" routerLink="about">About</a>
   </sui-sidebar>
-  <!-- <sui-sidebar-sibling [isDimmedWhenVisible]="true">
-      <div class="ui basic segment">
-          <h3 class="ui header">Content</h3>
-          <p>Example content beside the sidebar</p>
-          <button class="ui button" (click)="sidebar.open()">Open Sidebar</button>
-      </div>
-  </sui-sidebar-sibling> -->
   <sui-sidebar-sibling [isDimmedWhenVisible]="true">
     <router-outlet></router-outlet>
   </sui-sidebar-sibling>
