--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,3 +16,8 @@ nav a:hover {
 nav a.active {
     color: #039be5;
 }
+sui-sidebar-container{
+    background-image: url('https://wallpaperscraft.com/image/grass_leaves_drops_background_blur_spot_67968_3840x2160.jpg');
+    color: white;
+    text-align: center
+}
