--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,5 @@
-sui-sidebar-container{
-  height: 100%
+.tabs-body-content{
+  background-image: url('https://wallpaperscraft.com/image/grass_leaves_drops_background_blur_spot_67968_3840x2160.jpg');
+  color: white;
+  text-align: center
 }
